# AgroMech

./: .env.example  .gitignore  Dockerfile.backend  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.superpowers/sdd/: task-7-report.md
backend/agromech_api/: __init__.py  agent_controller.py  agent_graph.py  agent_router.py  agent_state.py  agent_tools.py  answer_generation.py  auth.py  chat_sessions.py  chunk_quality.py  config.py  database.py  document_metadata_extraction.py  documents.py  embedding.py  entity_extraction.py  errors.py  evaluation.py  evidence_check.py  file_storage.py  graph_rag.py  hybrid_retrieval.py  image_ingestion.py  image_qa.py  infrastructure.py  ingestion.py  main.py  model_aliases.py  ocr_ingestion.py  paddleocr_client.py  qa_session_history.py  query_understanding.py  rerank.py  retrieval_traces.py  search_indexing.py  service_adapters.py  table_ingestion.py  task_queue.py  text_ingestion.py  text_qa.py  (+3 more)
backend/alembic/: env.py
deploy/: docker-compose.prod.yml  env.prod.example  nginx.agromech.conf
docs/: README.md  api-spec.md  database-design.md  deployment.md  history.md  multi-agent-roadmap.md  prd.md  tech-design.md  ux-spec.md
frontend/: README.md  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
scripts/: create-user.py  e2e-smoke.sh  evaluate-retrieval.py  lint.sh  rebuild-vector-index.py  rebuild_vector_index.py  test-all.sh  test-integration.sh  test-unit.sh  zvec-backup.py
(+229 files in other folders)
