[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agromech"
version = "0.1.0"
description = "AgroMech RAG MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pypdf>=5.0.0",
  "pymupdf>=1.24.0",
  "sqlalchemy>=2.0.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "oss2>=2.18.0",
  "neo4j>=5.28.0",
  "pgvector>=0.3.0",
  "pika>=1.3.2",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0"
]

[tool.setuptools.packages.find]
where = ["backend", "worker"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "worker/tests"]
pythonpath = [".", "backend", "worker"]
